--- a/thesis/thesis.ltx
+++ b/thesis/thesis.ltx
@@ -40,6 +40,8 @@ Motivation. Related work. Solution. Evaluation.
 \section{Foundations}
 \import{./}{foundations.ltx}
 
+\section{Analysis of the Wikidata taxonomy}
+
 \section{Ontology learning}
 General concepts. Classification of considered problem in the task of ontology learning. Related work.\\
 \fullcite{Cimiano2009}\\
