Started writing foundations/similarity and foundations/similarity-based classification.

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -190,6 +190,37 @@ year = {2016}
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/PetrucciGR16},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
+% ontology learning survey
+@article{Hazman2011,
+abstract = {The problem that ontology learning deals with is the knowledge acquisition bottleneck, that is to say the difficulty to actually model the knowledge relevant to the domain of interest. Ontologies are the vehicle by which we can model and share the knowledge among various applications in a specific domain. So many research developed several ontology learning approaches and systems. In this paper, we present a survey for the different approaches in ontology learning from semi-structured and unstructured date General Terms Ontology learning approaches.},
+author = {Hazman, Maryam and El-Beltagy, Samhaa R and Rafea, Ahmed},
+journal = {International Journal of Computer Applications},
+keywords = {Ontology learning,Ontology learning evaluation,knowledge discovery},
+number = {9},
+pages = {975--8887},
+title = {{A Survey of Ontology Learning Approaches}},
+volume = {22},
+year = {2011}
+}
+
+% ontology mapping (older paper), useful as reference for problem statement
+@inproceedings{Doan2002,
+ author = {Doan, AnHai and Madhavan, Jayant and Domingos, Pedro and Halevy, Alon},
+ title = {Learning to Map Between Ontologies on the Semantic Web},
+ booktitle = {Proceedings of the 11th International Conference on World Wide Web},
+ series = {WWW '02},
+ year = {2002},
+ isbn = {1-58113-449-5},
+ location = {Honolulu, Hawaii, USA},
+ pages = {662--673},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/511446.511532},
+ doi = {10.1145/511446.511532},
+ acmid = {511532},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {machine learning, ontology mapping, relaxation labeling, semantic web},
+}
 % hierarchy learning via word embeddings
 @article{Fu2014,
 abstract = {Semantic hierarchy construction aims to build structures of concepts linked by hypernym–hyponym (“is-a”) relations. A major challenge for this task is the automatic discovery of such relations. This paper proposes a novel and effec- tive method for the construction of se- mantic hierarchies based on word em- beddings, which can be used to mea- sure the semantic relationship between words. We identify whether a candidate word pair has hypernym–hyponym rela- tion by using the word-embedding-based semantic projections between words and their hypernyms. Our result, an F-score of 73.74{\%}, outperforms the state-of-the- art methods on a manually labeled test dataset. Moreover, combining our method with a previous manually-built hierarchy extension method can further improve F- score to 80.29{\%}. 1},
@@ -202,7 +233,7 @@ title = {{Learning Semantic Hierarchies via Word Embeddings}},
 year = {2014}
 }
 
-% similarity (semantic)
+% similarity (information theory)
 @inproceedings{Lin1998,
  author = {Lin, Dekang},
  title = {An Information-Theoretic Definition of Similarity},
