--- a/thesis/thesis.ltx
+++ b/thesis/thesis.ltx
@@ -40,7 +40,7 @@ Motivation. Related work. Solution. Evaluation.
 \section{Foundations}
 \import{./}{foundations.ltx}
 
-\section{Analysis of the Wikidata taxonomy}
+\section{Analysis of the Wikidata taxonomy}\label{section:taxonomy analysis}
 
 \section{Ontology learning}
 General concepts. Classification of considered problem in the task of ontology learning. Related work.\\
