--- a/thesis/preamble.sty
+++ b/thesis/preamble.sty
@@ -23,15 +23,15 @@
 \newcommand{\fullcite}[1]{\citeauthor{#1} \cite{#1}}
 
 % taxonomy or concept hierarchy
-\newcommand{\taxon}{\ensuremath{\\le_C}}
+\newcommand{\taxon}{\ensuremath{\le_C}}
 % relation signature
-\newcommand{\relsig}{\ensuremath{\\sigma_R}}
+\newcommand{\relsig}{\ensuremath{\sigma_R}}
 % relation hierarchy
-\newcommand{\relhier}{\ensuremath{\\le_R}}
+\newcommand{\relhier}{\ensuremath{\le_R}}
 % attribute signature
-\newcommand{\attsig}{\ensuremath{\\sigma_\mathcal{A}}}
+\newcommand{\attsig}{\ensuremath{\sigma_\mathcal{A}}}
 % root class
-\newcommand{\rootc}{\ensuremath{\root_C}}
+\newcommand{\rootc}{\ensuremath{root_C}}
 % subclass of relation
 \newcommand{\subclassof}[1]{
 \ensuremath{\vartriangleleft_#1}
