--- a/thesis/thesis.ltx
+++ b/thesis/thesis.ltx
@@ -41,6 +41,7 @@ Motivation. Related work. Solution. Evaluation.
 \import{./}{foundations.ltx}
 
 \section{Analysis of the Wikidata taxonomy}\label{section:taxonomy analysis}
+\import{./}{taxonomy_analysis.ltx}
 
 \section{Ontology learning}
 General concepts. Classification of considered problem in the task of ontology learning. Related work.\\
