Finished foundations/taxonomy.

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -97,6 +97,27 @@ url = {http://ieeexplore.ieee.org/document/4700287/},
 volume = {20},
 year = {2009}
 }
+% ontology learning from text
+@article{Wong2012,
+ author = {Wong, Wilson and Liu, Wei and Bennamoun, Mohammed},
+ title = {Ontology Learning from Text: A Look Back and into the Future},
+ journal = {ACM Comput. Surv.},
+ issue_date = {August 2012},
+ volume = {44},
+ number = {4},
+ month = sep,
+ year = {2012},
+ issn = {0360-0300},
+ pages = {20:1--20:36},
+ articleno = {20},
+ numpages = {36},
+ url = {http://doi.acm.org/10.1145/2333112.2333115},
+ doi = {10.1145/2333112.2333115},
+ acmid = {2333115},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Ontology learning, application of ontologies, concept discovery, semantic relation acquisition, term recognition},
+}
 % intro to ontology learning
 @incollection{Cimiano2009,
   abstract = {Ontology learning techniques serve the purpose of supporting an ontology
@@ -138,27 +159,6 @@ We present a generic architecture for ontology learning systems and discuss its 
   title = {Ontology enrichment by discovering multi-relational association rules from ontological knowledge bases.},
   url = {http://dblp.uni-trier.de/db/conf/sac/sac2016.html\#dAmatoSTMG16},
   year = 2016
-}
-% ontology learning from text
-@article{Wong2012,
- author = {Wong, Wilson and Liu, Wei and Bennamoun, Mohammed},
- title = {Ontology Learning from Text: A Look Back and into the Future},
- journal = {ACM Comput. Surv.},
- issue_date = {August 2012},
- volume = {44},
- number = {4},
- month = sep,
- year = {2012},
- issn = {0360-0300},
- pages = {20:1--20:36},
- articleno = {20},
- numpages = {36},
- url = {http://doi.acm.org/10.1145/2333112.2333115},
- doi = {10.1145/2333112.2333115},
- acmid = {2333115},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {Ontology learning, application of ontologies, concept discovery, semantic relation acquisition, term recognition},
 }
 % ontology learning and population from text
 @book{Cimiano2006,
@@ -323,4 +323,16 @@ booktitle = {Speech and Language Processing},
 chapter = {N-Grams},
 title = {{N-Grams}},
 year = {2014}
+}
+% wikidata subclass of documentation
+@misc{WikidataP279,
+title={Property talk:P279},
+howpublished={\url{https://www.wikidata.org/wiki/Property_talk:P279}}
+note={Accessed: 2017-01-29}
+}
+% wikidata entity talk
+@misc{WikidataQ35120,
+title={Talk:Q35120},
+howpublished={\url{https://www.wikidata.org/wiki/Talk:Q35120}},
+note={Accessed: 2017-01-29}
 }
